# talks

./: README.md  index.html
bi-forum_2019/: slides.html
bi-forum_2019/css/: white.css
ostrava-python-pizza_2026/: .gitignore  Justfile  README.md  chmix.py  presentation.toml
ostrava-python-pizza_2026/chmix/: README.md  pyproject.toml
ostrava-python-pizza_2026/chmix/src/chmix/: __init__.py
ostrava-python-pizza_2026/docker/: Dockerfile
ostrava-python-pizza_2026/slides/: agent.md  aladin_forecast.py  end.md  outline1.md  outline2.md  outline3.md  pypi.md  tasks.md  title.md  use_chmix.py
ostrava-python-pizza_2026/versions/: chmix_base.py  chmix_function.py  chmix_main.py  chmix_typer.py
prague-python-pizza_2024/: index.html
pycon-cz_2019/: index.html
pycon-cz_2019/css/: white.css
pycon-lt_2019/: index.html
pycon-lt_2019/theme/: physt-white.css
pydata-cambridge_2019/: slides.html
pydata-cambridge_2019/_assets/css/: white.css
pydata-prague_2020/: index.html
pydata-prague_2020/_assets/css/: white.css
