[project]
name = "chmix"
version = "0.0.2"
description = "Download weather forecast data from CHMI."
readme = "README.md"
authors = [
    { name = "Jan Pipek", email = "jan.pipek@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "tabulate>=0.9.0",
    "typer>=0.24.0",
]
license = "MIT"

[project.scripts]
chmix = "chmix:app"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
